--- a/_posts/2019-09-18-article-1/article-1.html
+++ b/_posts/2019-09-18-article-1/article-1.html
@@ -1069,7 +1069,7 @@
 </tr>
 <tr class="odd">
 <td>General topic?</td>
-<td>Scientics carried out a study to examine and to understand the melting of glaciers in Alaska.</td>
+<td>Scientifics carried out a study to examine and to understand the melting of glaciers in Alaska.</td>
 </tr>
 <tr class="even">
 <td>Procedure/what was examined?</td>
