--- a/_posts/Article-1/article-1.html
+++ b/_posts/Article-1/article-1.html
@@ -488,7 +488,7 @@ $(document).ready(function () {
 </tr>
 <tr class="even">
 <td>Published in?</td>
-<td>07/26/2019</td>
+<td>July 26, 2019</td>
 </tr>
 <tr class="odd">
 <td>General topic?</td>
