--- a/_posts/2019-11-28-article-4/article-4.html
+++ b/_posts/2019-11-28-article-4/article-4.html
@@ -960,6 +960,7 @@
 </div>
 
 <div class="d-article">
+<p>/media/sf_shared/English’s blog/image article 4.jpg</p>
 <p><a href="https://www.bbc.com/news/science-environment-49817804" class="uri">https://www.bbc.com/news/science-environment-49817804</a></p>
 <h1 id="vocabulary">Vocabulary</h1>
 <table>
