--- a/_posts/2019-11-12-my-english-activity-log/my-english-activity-log.html
+++ b/_posts/2019-11-12-my-english-activity-log/my-english-activity-log.html
@@ -964,14 +964,21 @@
 <ul>
 <li><p>09/22/2019: I watched the movie “Journey 2” in V.O subtitled in English. I liked this movie because it was funny and I thought that Dwayne Johnson and Josh Hutcherson are good actors.</p></li>
 <li><p>09/25/2019-10/02/2019: I watched an episode in English of the series “Sex education” every evening.</p></li>
-<li><p>10/07/2019: I started watching in English “The chilling adventures of Sabrina”. I watch this series because it’s a remake of an older series “Sabrina” that I often watched with my sister when we were childs. I think the remake is better.</p></li>
+<li><p>10/03/2019: I started watching in English “The chilling adventures of Sabrina”. I watch this series because it’s a remake of an older series “Sabrina” that I often watched with my sister when we were childs. I think the remake is better.</p></li>
 <li><p>10/11/2019: I watched 3 episodes of &quot;The end of the f***ing world&quot; in English with the subtitles in English. I find this series a little bit weird.</p></li>
+<li><p>Barely every evening I watch an episode of a serie on Netflix in English subtitled in English too.</p></li>
 </ul>
 <h1 id="applications">Applications</h1>
 <ul>
-<li><p>10/05/2019: I changed the language of my phone from French to English.</p></li>
+<li><p>09/20/2019: I changed the language of my phone from French to English.</p></li>
 <li><p>10/25/2019: Download of an application about English grammar.</p></li>
 <li><p>Since a long time: I like some scientific pages on Facebook so I often read publications and I listen videos in English.</p></li>
+</ul>
+<h1 id="lessons-and-other-things">Lessons and other things</h1>
+<ul>
+<li><p>11/16-11/17/2019 : I watched all videos on moodle about the different tenses.</p></li>
+<li><p>03/06/2020: I red an article about a animal who don’t need oxygen to live.</p></li>
+<li><p>03/08/2020: I studied the vocabulary and the grammar points of the units 7 &amp; 8.</p></li>
 </ul>
 <!--radix_placeholder_article_footer-->
 <!--/radix_placeholder_article_footer-->
