--- a/_posts/2019-12-10-article5/article5.html
+++ b/_posts/2019-12-10-article5/article5.html
@@ -960,6 +960,7 @@
 </div>
 
 <div class="d-article">
+<p><img src="/media/sf_shared/projects/killian-verhoeye-blog/389603C4-9879-41FD-AADF54123C5FC711_source.png" /></p>
 <p><a href="https://www.scientificamerican.com/article/huge-lakes-abruptly-empty-into-greenland-ice-sheet/" class="uri">https://www.scientificamerican.com/article/huge-lakes-abruptly-empty-into-greenland-ice-sheet/</a></p>
 <h1 id="vocabulary">Vocabulary</h1>
 <table>
